* [LearningPath] Fixed bug with multiple selected items when viewing the results
* [LearningPath] Fixed the abscence of the extra button when the learning path is first opened
* [LearningPath] Fixed the completed icon on the root of the learning path
* [Repository] Always include the latest version of content objects in the workspaces
* [Weblcms] Changed icons in list view for select / unselect all
* [Course Groups] Fixes for breadcrumbs
* [Repository] Fixed a bug where the search parameters in a workspace could not be removed
* [Repository] Fixed a bug where adding an existing content object doesn't keep track of the selected category in the workspaces
* [Repository] Remember the search parameter when navigating in the repo viewer
* [Weblcms] Fixed a fatal error in the course menu home block
* [Course Groups] Added a complete introduction text publisher where you can create a new introduction or select / import an existing one.
* [Repository] Fixed the update of the content object versions in workspaces
* [Repository] Removed translations with {ICON} in them
* [Repository] Fixed the selected icon in the menu item for workspaces when navigating in a workspace
* [Repository] Changed the titles of the imported content objects through drag and drop to exclude file extensions
* [User] Fixed correct redirect after user logout
* [Repository] Links between workspaces and objects are now based on content object numbers instead of content object ids
* [Webpage] Added usability fixes to make a distinct difference between page and webpage
* [Assignment] Bugfix for reporting of course group submissions

[20/05/2016]
* [Repository] Changed the files importer to add a message when a file is imported
* [Repository] Bugfix in the workspaces for the "make favourite" action as table actions
* [Course Groups] Added better course group form layout
* [User] Added a retry button when a login has failed
* [Portfolio] Use the same menu structure as the learning path