@@ -7,17 +7,17 @@ TypeName = "Copy this course"
 TypeCategory = "Course Tools"
 CopyConfirmationQuestion = "Are you sure you want to copy this course?"
 CopyThisCourse = "Copy this course"
-CopyThisCourseInformation = "Copy the course information"
+CopyThisCourseInformation = "3. Confirm"
 NoCoursesToCopy = "There are no courses to copy to"
 NoPublications = "There are no publications and sections to copy in this course"
 Course = "Course"
-Publications = "Publications"
+Publications = "1. Select the publications and / or publication categories"
 SelectAItem = "Select at least 1 item"
 SelectPublications = "Select publications"
 CategoryTypeName = "Category"
 CourseSections = "Course sections"
 CourseAdministration = "Course administration"
-SelectCourse = "Select course to copy to"
+SelectCourse = "2. Select the course(s) you want to copy the selected data to"
 CopySucceeded = "Copy is complete"
 CopyNotSucceeded = "Not all files are copied"
 PublicationCategories = "Only copy the publications (exclude categories)"
@@ -50,3 +50,4 @@ NotAllSelectedObjectsRemoved = "Not all selected objects are removed"
 Tools = "Tools"
 CopyNotification = "Warning: not every item in the course will be copied.<br />Excluded items: submissions of assignments, attempts of assessments, statistics, coursegroups and rights"
 BrowserComponent = "Copy publications and publication categories"
+Copy = "Copy"
