@@ -6,17 +6,17 @@
 TypeName = "Cursus kopiëren"
 CopyConfirmationQuestion = "Ben je zeker dat je deze cursus wil kopiëren?"
 CopyThisCourse = "Kopieer deze cursus"
-CopyThisCourseInformation = "Kopieer de informatie"
+CopyThisCourseInformation = "3. Bevestig"
 NoCoursesToCopy = "Er zijn geen cursussen waar je kunt naar kopiëren"
 NoPublications = "Er zijn geen publicaties en secties in deze cursus om te kopiëren"
 Course = "Cursus"
-Publications = "Publicaties"
+Publications = "1. Selecteer publicaties en / of publicatie categorieën"
 SelectAItem = "Selecteer minstens 1 item"
 SelectPublications = "Selecteer publicaties"
 CategoryTypeName = "Categorie"
 CourseSections = "Cursussecties"
 CourseAdministration = "Cursus administratie"
-SelectCourse = "Cursus waar de informatie kopieren"
+SelectCourse = "2. Selecteer de cursussen naar waar de geselecteerde gegevens moeten gekopieerd worden"
 CopySucceeded = "Kopieren is gedaan"
 CopyNotSucceeded = "Niet alles is gekopieerd"
 PublicationCategories = "Kopieer enkel de publicaties (negeer de categorieën)"
@@ -49,3 +49,4 @@ NotAllSelectedObjectsRemoved = "Niet alle geselecteerde objecten zijn verplaatst
 Tools = "Tools"
 CopyNotification = "Opgelet: niet alles in de cursus wordt gekopiëerd.<br />Wordt uitgesloten: inzendingen van opdrachten, pogingen op oefeningen, statistieken, cursusgroepen en publicatie-rechten"
 BrowserComponent = "Kopieer publicaties en categorieën naar andere cursussen"
+Copy = "Kopieer"
