@@ -9,17 +9,18 @@ EmptyConfirmationQuestion = "Are you sure you want to empty this course?"
 AllSelectedObjectsRemoved = "All selected opbjects are removed"
 NotAllSelectedObjectsRemoved = "Not all selected objects are removed"
 EmptyThisCourse = "Empty this course"
-EmptyThisCourseInformation = "Empty selection(s)"
+EmptyThisCourseInformation = "2. Confirm"
 SelectAItem = "Select at least 1 item"
 Course = "Course"
-Publications = "Publications"
+Publications = "1. Select the publications and / or publication categories that you want to remove"
 NoPublications = "There are no publications and sections in this course"
 SelectPublications = "Select publications"
 CategoryTypeName = "Category type name"
 CourseSections = "Course sections"
 CourseAdministration = "Course administration"
-PublicationCategories = "Publication categories"
+PublicationCategories = "Remove the publication categories"
 ContentObjectNotImported = "Content object not imported"
 CourseDeleteFailed = "Course not deleted"
 Other = "Other"
 BrowserComponent = "Truncate course"
+Truncate = "Truncate"
