@@ -8,17 +8,18 @@ EmptyConfirmationQuestion = "Ben je zeker dat je deze cursus wilt wissen?"
 AllSelectedObjectsRemoved = "Alle geselecteerde objecten zijn gewist"
 NotAllSelectedObjectsRemoved = "Niet alle geselecteerde objecten zijn gewist"
 EmptyThisCourse = "Maak cursus leeg"
-EmptyThisCourseInformation = "Selectie verwijderen"
+EmptyThisCourseInformation = "2. Bevestig"
 SelectAItem = "Selecteer minstens 1 item"
 Course = "Cursus"
-Publications = "Publicatie"
+Publications = "1. Selecteer de publicaties en / of publicatie categorieën die je wilt verwijderen"
 NoPublications = "Er zijn geen publicaties en secties in deze cursus"
 SelectPublications = "Selecteer publicatie"
 CategoryTypeName = "Categorie type naam"
 CourseSections = "Cursus tabs"
 CourseAdministration = "Cursus beheer"
-PublicationCategories = "Publicatie categorie"
+PublicationCategories = "Verwijder de publicatie categorieën"
 ContentObjectNotImported = "Object niet geimporteerd"
 CourseDeleteFailed = "Cursus niet verwijderd"
 Other = "Andere"
 BrowserComponent = "Maak de cursus leeg"
+Truncate = "Maak de cursus leeg"
