@@ -92,3 +92,5 @@
 * [Course Groups] Added better course group form layout
 * [User] Added a retry button when a login has failed
 * [Portfolio] Use the same menu structure as the learning path
+* [Course Copier] Cleanup of the form layout
+* [Course Truncater] Cleanup of the form layout
